<resources>
    <string name="app_name">IPS-Rev1</string>
    <string name="vidyatech">Vidyatech</string>
    <string name="indoor_positioning_system">Indoor Positioning System</string>
    <string name="live_view">Live View</string>
    <string name="chart_view">Chart View</string>
    <string name="table_view">Table View</string>
    <string name="statistics">Statistics:</string>
    <string name="new_alerts_heading">New Alerts:</string>
    <string name="all_alerts_heading">All Alerts:</string>
    <string name="new_alerts_button">New Alerts</string>
    <string name="all_alerts_button">All Alerts</string>
    <string name="enter_room_name">Enter Room Name:</string>
    <string name="enter_length">Enter Room Length:</string>
    <string name="enter_room_width">Enter Room Width:</string>
    <string name="title_activity_mystore">My Store</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="hours">Hours</string>
    <string name="BaseAPI">http://192.168.16.99:1234/api/btapp</string>

</resources>
