<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tushar.ips_rev1.welcome_page">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/indoor_positioning_system"
        android:id="@+id/welcome_heading"
        android:textSize="27sp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Proceed"
        android:id="@+id/welcome_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/notifications_list"
        android:layout_alignEnd="@+id/notifications_list"
        android:layout_alignLeft="@+id/welcome_heading"
        android:layout_alignStart="@+id/welcome_heading" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notifications_list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/welcome_button"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/welcome_update" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/new_alerts_heading"
        android:id="@+id/welcome_update"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_heading"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/new_alerts_button"
            android:id="@+id/new_alerts"
            android:layout_marginStart="49dp"
            android:layout_below="@+id/welcome_heading"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/all_alerts_button"
            android:id="@+id/all_alerts"
            android:layout_alignTop="@+id/new_alerts"
            android:layout_toEndOf="@+id/new_alerts" />
    </LinearLayout>

</RelativeLayout>
