<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tushar.ips_rev1.mystore"
    tools:showIn="@layout/app_bar_mystore">


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_above="@+id/live_view_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:id="@+id/view2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:id="@+id/view"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />




        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/live_view"
            android:id="@+id/live_view_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/chart_view"
            android:id="@+id/chart_view_button"
            android:layout_alignBottom="@+id/live_view_button"
            android:layout_centerHorizontal="true"
            android:onClick="setContentView" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/table_view"
            android:id="@+id/table_view_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/statistics"
            android:id="@+id/mystore_heading"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statistics_list"
            android:layout_below="@+id/mystore_heading"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/view2"
            android:choiceMode="none"
            android:scrollbars="none"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mystore_heading"
        android:layout_alignParentStart="true"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Floor:"
            android:id="@+id/textView9"
            android:textSize="15sp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/mystore_floor_spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:spinnerMode="dialog" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Room:"
            android:id="@+id/textView10"
            android:textSize="15sp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp" />
        <Spinner
            android:id="@+id/mystore_room_spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAlignment="center"
            android:spinnerMode="dialog" />
    </LinearLayout>


</RelativeLayout>

